<resources>
    <string name="app_name">Cloud9Car</string>
    <string name="login">登录</string>
    <string name="pls_input_phone">请输入手机号码</string>
    <string name="next">下一步</string>
    <string name="sms_code_input">请输入验证码</string>
    <string name="sms_code_send_phone">验证码已发送至%s</string>
    <string name="resend">重新发送</string>
    <string name="sms_code_error">验证码错误</string>
    <string name="sending">正在向%s发送短信验证码</string>
    <string name="after_time_resend">%d秒后重新发送</string>
    <string name="sms_send_fail">服务器异常，验证码未发送成功</string>
    <string name="sms_check_fail">验证码输入错误</string>
    <string name="error_server">服务器繁忙</string>
    <string name="create_pw">创建密码</string>
    <string name="pls_input_pw">请输入密码</string>
    <string name="pls_input_pw_again">请再次输入密码</string>
    <string name="confirm">提交</string>
    <string name="pw_is_null">密码不能为空</string>
    <string name="pw_is_not_equals">两次输入的密码不一致</string>
    <string name="register_suc_and_login">注册成功，正在为您自动登录</string>
    <string name="rejectPermission">请在设置中修改权限</string>
    <string name="login_suc">登录成功</string>
    <string name="pw_error">密码输入错误</string>
    <string name="login_error">登录失败</string>
    <string name="token_invalid">Token失效</string>

    <string name="where_are_you_go">您要去哪</string>
    <string name="start">起点</string>
    <string name="end">终点</string>
    <string name="locating">定位中...</string>
    <string name="call">呼叫快车</string>
    <string name="cancel">取消</string>
    <string name="route_info">全程%1$d公里，预计%2$.2f元，%3$d分钟到达</string>
    <string name="calling_driver">正在呼叫附近司机</string>
    <string name="accept_info">司机：%1$s(车牌:%2$s)已经接单,全程%3$.2f公里，%4$d分钟到达</string>
    <string name="driver_arrive">司机：%1$s(车牌:%2$s)已经到达</string>
    <string name="order_cancel_suc">取消成功</string>
    <string name="order_cancel_error">取消失败</string>
    <string name="pay">支付</string>
    <string name="pay_info">行程结束，感谢你使用CloudCar，你需支付¥ %1$.2f 。\n 司机：%2$s 车牌:%3$s</string>
    <string name="cancel_fail">取消失败</string>
    <string name="pay_suc">支付成功</string>
    <string name="show_call_suc">订单发送成功，请等待司机接单</string>
    <string name="show_call_fail">呼叫失败，稍后再试</string>
    <string name="driver_arrive_pure">司机已到达</string>
    <string name="canceling">订单取消中...</string>
    <string name="service">客服</string>
    <string name="order">订单</string>
    <string name="feedback">反馈</string>
    <string name="driver">司机：</string>
    <string name="loading">加载中...</string>
    <string name="price">¥ %1$.2f</string>
    <string name="login_in_main">请先进行登录</string>
    <string name="driving_info">司机：%1$s(车牌:%2$s)开始行驶,还有%3$.2f公里到达，预计用时%4$d分钟</string>
    <string name="pay_fail">支付失败，请重新支付</string>
    <string name="paying">正在支付</string>


</resources>
